--- a/index.html
+++ b/index.html
@@ -12,5 +12,28 @@
             <img class="logo" src="/img/logo.png" alt="">
             <img class="nome" src="/img/nome.png" alt="">
     </header>
+    <main>
+        <div class="irPara">
+            <p class="ir">Ir para o portal BB</p>
+            <img src="./img/seta.png" alt="">
+        </div>
+        <div class="container">
+            <div class="confirma">
+            <img src="./img/cell.png" alt="">
+            <p class="textConfirma">Confirmação de dados</p>
+            </div>
+            <form class="form1" action="">
+                <label class="textInput" for="numeroCartao">Número do cartão</label>
+                <input class="padrao" type="number" name="numeroCartao" id="numeroCartao">
+                <label class="textInput" for="cvv">CVV</label>
+                <input type="number" name="cvv" id="cvv">
+                <label class="textInput" for="agencia">Agência</label>
+                <input class="padrao" type="number" name="agencia" id="agencia">
+                <label class="textInput" for="dataValidade">Data de validade</label>
+                <input type="date" name="dataValidade" id="dataValidade">
+            </form>
+        </div>
+        
+    </main>
 </body>
 </html>
